{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 110,
  "lineage": "1d95ef65-e7e0-9691-4915-b509f96fb621",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:listener/app/alb/d0b7eafe9e368993/11e6f8929604fe72",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:targetgroup/tg/0cd0e54bd37a688d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010717011792:listener/app/alb/d0b7eafe9e368993/11e6f8929604fe72",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:loadbalancer/app/alb/d0b7eafe9e368993",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb-tg",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "instance_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:010717011792:targetgroup/tg/0cd0e54bd37a688d-20230710114139923500000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:targetgroup/tg/0cd0e54bd37a688d",
            "target_id": "i-00c90aede95203b2b"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.alb-tg",
            "module.compute.aws_instance.redhat_instance01",
            "module.compute.data.template_file.redhat01",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.wp_subnet_1",
            "module.networking.aws_subnet.wp_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:loadbalancer/app/alb/d0b7eafe9e368993",
            "arn_suffix": "app/alb/d0b7eafe9e368993",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1116734741.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:010717011792:loadbalancer/app/alb/d0b7eafe9e368993",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-09c9d54bde6529b14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bb1d23afae020ad"
              },
              {
                "subnet_id": "subnet-067d5f67230d5f185"
              }
            ],
            "subnets": [
              "subnet-03bb1d23afae020ad",
              "subnet-067d5f67230d5f185"
            ],
            "vpc_id": "vpc-05dfde3edc8fcb4bc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010717011792:targetgroup/tg/0cd0e54bd37a688d",
            "arn_suffix": "targetgroup/tg/0cd0e54bd37a688d",
            "connection_termination": false,
            "deregistration_delay": "20",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010717011792:targetgroup/tg/0cd0e54bd37a688d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00986e3eae679edbf",
            "association_id": "eipassoc-076edde17510a9572",
            "domain": "vpc",
            "id": "eipalloc-00986e3eae679edbf",
            "instance": "i-0e9e953ae7a3a8a82",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06df0bce9535db9c8",
            "private_dns": "ip-10-1-0-44.ec2.internal",
            "private_ip": "10.1.0.44",
            "public_dns": "ec2-52-3-54-236.compute-1.amazonaws.com",
            "public_ip": "52.3.54.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "redhat_instance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:010717011792:instance/i-00c90aede95203b2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c90aede95203b2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "coalfire-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f8ef7ed1ceccbed",
            "private_dns": "ip-10-1-2-181.ec2.internal",
            "private_ip": "10.1.2.181",
            "public_dns": "ec2-52-90-125-194.compute-1.amazonaws.com",
            "public_ip": "52.90.125.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f8b79780e10b450",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c05bf2fdeb248ad",
            "tags": {
              "Name": "RedHat-wpserver1"
            },
            "tags_all": {
              "Name": "RedHat-wpserver1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f8719d764f0f6b3"
            ]
          },
          "dependencies": [
            "module.compute.data.template_file.redhat01",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.wp_subnet_1",
            "module.networking.aws_subnet.wp_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "redhat_instance02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:010717011792:instance/i-0ad712f7ee15f60fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad712f7ee15f60fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "coalfire-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06fa5a687c880348c",
            "private_dns": "ip-10-1-3-151.ec2.internal",
            "private_ip": "10.1.3.151",
            "public_dns": "ec2-3-85-95-169.compute-1.amazonaws.com",
            "public_ip": "3.85.95.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05fadfc81ba40106a",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044f9004321d92b8d",
            "tags": {
              "Name": "RedHat-wpserver2"
            },
            "tags_all": {
              "Name": "RedHat-wpserver2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f8719d764f0f6b3"
            ]
          },
          "dependencies": [
            "module.compute.data.template_file.redhat02",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.wp_subnet_1",
            "module.networking.aws_subnet.wp_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b0cd1af6c0c34e3",
            "arn": "arn:aws:ec2:us-east-1:010717011792:instance/i-0e9e953ae7a3a8a82",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9e953ae7a3a8a82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "coalfire-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06df0bce9535db9c8",
            "private_dns": "ip-10-1-0-44.ec2.internal",
            "private_ip": "10.1.0.44",
            "public_dns": "ec2-52-3-54-236.compute-1.amazonaws.com",
            "public_ip": "52.3.54.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0b15909474829a089",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067d5f67230d5f185",
            "tags": {
              "Name": "Windows-Server-2019"
            },
            "tags_all": {
              "Name": "Windows-Server-2019"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f8719d764f0f6b3"
            ]
          },
          "dependencies": [
            "module.compute.data.template_file.windows",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.wp_subnet_1",
            "module.networking.aws_subnet.wp_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:internet-gateway/igw-0063af68972fc8749",
            "id": "igw-0063af68972fc8749",
            "owner_id": "010717011792",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0063af68972fc8749",
            "id": "r-rtb-0122c334e422ae5a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0122c334e422ae5a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "wp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0063af68972fc8749",
            "id": "r-rtb-0f30c81b99da2ed3a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f30c81b99da2ed3a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_route_table.wp_rt",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:route-table/rtb-0e82bb6ee1e47f02e",
            "id": "rtb-0e82bb6ee1e47f02e",
            "owner_id": "010717011792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "database_rt"
            },
            "tags_all": {
              "Name": "database_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:route-table/rtb-0122c334e422ae5a0",
            "id": "rtb-0122c334e422ae5a0",
            "owner_id": "010717011792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0063af68972fc8749",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:route-table/rtb-0f30c81b99da2ed3a",
            "id": "rtb-0f30c81b99da2ed3a",
            "owner_id": "010717011792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0063af68972fc8749",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_rt"
            },
            "tags_all": {
              "Name": "wp_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04739493cedf77a84",
            "route_table_id": "rtb-0e82bb6ee1e47f02e",
            "subnet_id": "subnet-07b2230ea426ad1e9"
          },
          "dependencies": [
            "module.networking.aws_route_table.database_rt",
            "module.networking.aws_subnet.database_subnet_1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d25411e5cc940cf8",
            "route_table_id": "rtb-0e82bb6ee1e47f02e",
            "subnet_id": "subnet-006efb82d38314b95"
          },
          "dependencies": [
            "module.networking.aws_route_table.database_rt",
            "module.networking.aws_subnet.database_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0304e4a22b71a6a",
            "route_table_id": "rtb-0122c334e422ae5a0",
            "subnet_id": "subnet-067d5f67230d5f185"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096faf0b059822553",
            "route_table_id": "rtb-0122c334e422ae5a0",
            "subnet_id": "subnet-03bb1d23afae020ad"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24b3d8a9baa36bc",
            "route_table_id": "rtb-0f30c81b99da2ed3a",
            "subnet_id": "subnet-09c05bf2fdeb248ad"
          },
          "dependencies": [
            "module.networking.aws_route_table.wp_rt",
            "module.networking.aws_subnet.wp_subnet_1",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667c588feb9c407a",
            "route_table_id": "rtb-0f30c81b99da2ed3a",
            "subnet_id": "subnet-044f9004321d92b8d"
          },
          "dependencies": [
            "module.networking.aws_route_table.wp_rt",
            "module.networking.aws_subnet.wp_subnet_2",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-07b2230ea426ad1e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b2230ea426ad1e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-Subnet1"
            },
            "tags_all": {
              "Name": "Database-Subnet1"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-006efb82d38314b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006efb82d38314b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-Subnet2"
            },
            "tags_all": {
              "Name": "Database-Subnet2"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-067d5f67230d5f185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067d5f67230d5f185",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet1"
            },
            "tags_all": {
              "Name": "Public-Subnet1"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-03bb1d23afae020ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bb1d23afae020ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet2"
            },
            "tags_all": {
              "Name": "Public-Subnet2"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-09c05bf2fdeb248ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c05bf2fdeb248ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-Applicatiton-Subnet1"
            },
            "tags_all": {
              "Name": "Web-Applicatiton-Subnet1"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:subnet/subnet-044f9004321d92b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044f9004321d92b8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010717011792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-Applicatiton-Subnet2"
            },
            "tags_all": {
              "Name": "Web-Applicatiton-Subnet2"
            },
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:vpc/vpc-05dfde3edc8fcb4bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bd48f48f74cf7fe2",
            "default_route_table_id": "rtb-0f707fd4f0fad036d",
            "default_security_group_id": "sg-05a3bb2d14df7d239",
            "dhcp_options_id": "dopt-04e2576cb16256325",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05dfde3edc8fcb4bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f707fd4f0fad036d",
            "owner_id": "010717011792",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:security-group/sg-09c9d54bde6529b14",
            "description": "Security Group for LoadBalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c9d54bde6529b14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "LoadBalancer-sg",
            "name_prefix": "",
            "owner_id": "010717011792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LoadBalancer-sg"
            },
            "tags_all": {
              "Name": "LoadBalancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:security-group/sg-053aee6d7198c1d7d",
            "description": "Security Group for Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053aee6d7198c1d7d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "POSTGRESQL Port",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f8719d764f0f6b3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Database-sg",
            "name_prefix": "",
            "owner_id": "010717011792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-sg"
            },
            "tags_all": {
              "Name": "Database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.security_groups.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010717011792:security-group/sg-00f8719d764f0f6b3",
            "description": "Security Group for SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f8719d764f0f6b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP Port",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSh Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH-sg",
            "name_prefix": "",
            "owner_id": "010717011792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-sg"
            },
            "tags_all": {
              "Name": "SSH-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dfde3edc8fcb4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}